# mask

./: CMakeLists.txt  LICENSE  Main.cpp  args.hpp  readme.md
snap/: snapcraft.yaml
